added the student program website

--- a/.gitignore
+++ b/.gitignore
@@ -175,6 +175,28 @@ Temporary Items
 .history
 .ionide
 
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
 # Support for Project snippet scope
 
 # End of https://www.toptal.com/developers/gitignore/api/macos,linux,jetbrains,visualstudiocode
