Chore: update new slack url (#30)
Signed-off-by: Achanandhi-M <achanandhi.m@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -200,3 +200,5 @@ yarn-error.log*
 # Support for Project snippet scope
 
 # End of https://www.toptal.com/developers/gitignore/api/macos,linux,jetbrains,visualstudiocode
+.next/
+next-env.d.ts
